  * Introduced FluidX format for input datasets, now with ability to use single 
    or many files
  * Introduced precision setting for output of floating point values   
  * Added environment variable OPENFLUID_FUNCS_PATH (path to search for 
    simulation functions) 
  * Added environment variable OPENFLUID_INSTALL_PREFIX (overriding automatic 
    prefix path, useful on win32 platforms)
  * Updated console display    
  * Replaced TinyXML library with LibXML2  
  * Refactored internal model description and model instance management
  * Refactored internal IO management
  * Refactored internal messaging management  
  * Cleaned source code
  * Improved development tests
  * Fixed bug in comparison functions for floating point values
  * Fixed bug in plugged simulation functions manager
  * Fixed bug in variable existence checking methods      
  * Fixed various small bugs


1.4.2

  * Fixed major bug in OPENFLUID_Is*VariableExist() primitives



1.4.1

  * Introduced buddies tools : dataset conversion tools (1.3 to 1.4), function 
    documentation (func2doc), generation of empty dataset , generation of 
    function source code   
  * Added methods to generate events from simulation functions
  * Renamed DistributedEvent class into Event class  
  * Added --show-paths command line option
  * Removed links to wxWidgets libraries
  * Introduced boost libraries 
  * Introduced custom dynamic library loader
  * Fixed some small bugs
  * Cleaned some code
  * Improved win32 and MacOSX compatibility  
  * Added many tests, in order to improve software quality



1.4.0

  * Introduced new "generic units" feature
  * Introduced new "progressive output" feature (on data and execution messages)
  * Modified data handling primitives (OPENFLUID_xxxx)
  * Modified declaration of functions signatures 
  * Added macros for units lists loops, according to the "generic units" 
    features
  * Added tool for floating point values equality check